<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_pokedex"
        android:enabled="true"
        android:icon="@drawable/ic_pokeball"
        android:title="@string/myPokemons"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_pokeshop"
        android:enabled="true"
        android:icon="@drawable/ic_pokeshop"
        android:title="@string/pokeshop"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_fights"
        android:enabled="true"
        android:icon="@drawable/ic_fights"
        android:title="@string/fights"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_friends"
        android:enabled="true"
        android:icon="@drawable/ic_friends"
        android:title="@string/myFriends"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/myProfile"
        app:showAsAction="ifRoom" />

</menu>