<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/llTest">
        <ImageView
                android:id="@+id/pokemonSprite"
                android:contentDescription="@string/pokemonSpriteDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:layout_weight="1"/>
        <TextView
                android:id="@+id/pokemonName"
                android:text="@string/pokemonName"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"/>
        <TextView
                android:id="@+id/pokemonPrice"
                android:text="@string/pokemonPrice"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"/>
        <ImageView
                android:id="@+id/pokedollarIcon"
                android:contentDescription="@string/pokedollarIconDesc"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_pokedollar"
                android:layout_weight="1"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>