<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:id="@+id/linearLayout">
        <ImageView
                android:id="@+id/pokedollarIcon"
                android:contentDescription="@string/pokedollarIconDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_pokedollar"
                tools:layout_editor_absoluteY="46dp" tools:layout_editor_absoluteX="193dp"
        />
        <TextView
                android:text="@string/numberOfDiamonds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/numberOfPokedollars" android:layout_weight="1"/>
        <ImageView
                android:id="@+id/diamondIcon"
                android:contentDescription="@string/diamondIconDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_diamond"
                tools:layout_editor_absoluteY="60dp"
                tools:layout_editor_absoluteX="101dp"
        />
        <TextView
                android:text="@string/numberOfCoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/numberOfDiamonds" android:layout_weight="1"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="0dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="0dp" android:layout_marginBottom="0dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>