<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/constraintLayout">

    <com.google.android.material.textfield.TextInputLayout android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           android:id="@+id/inputLayoutUserId"
                                                           app:layout_constraintTop_toTopOf="parent"
                                                           app:layout_constraintEnd_toEndOf="parent"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           android:layout_marginStart="8dp"
                                                           android:layout_marginEnd="8dp"
                                                           android:layout_marginBottom="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userIdTextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/userId"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/recyclerViewPokedex" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutUserId" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/pokemonIdTextView"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pokemonIdTextView"
            android:text="@string/nonePokemonSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/exchangeInitButton"
    />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/exchangeInitButton"
            android:text="@string/exchangeInitButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>